--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "peacesong",
   "license": "ISC",
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.0",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
+    "react-router-dom": "^5.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
@@ -25,7 +27,6 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-dom": "^17.0.2"
   }
 }
