--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
+    "isomorphic-style-loader": "^5.3.2",
     "react-router-dom": "^5.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
