--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "isomorphic-style-loader": "^5.3.2",
+    "node-sass": "^6.0.1",
     "react-router-dom": "^5.3.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
