--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "semantic-ui-react": "^2.0.4"
   }
 }
