--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "semantic-ui-react": "^2.0.4"
